src/objects/PSA_Sharing_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines on and off settings for the triggers on PSA objects and their apex managed sharing.</description>
    <fields>
        <fullName>AutoSharing_ExpenseReport_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Apex Managed Sharing on Expense Reports</description>
        <label>AutoSharing-ExpenseReport-Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoSharing_Expense_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Apex Managed Sharing on Expenses</description>
        <label>AutoSharing-Expense-Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoSharing_Project_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Apex Managed Sharing on Projects and their child objects</description>
        <label>AutoSharing-Project-Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoSharing_Timecard_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Apex Managed Sharing on Timecards</description>
        <label>AutoSharing-Timecard-Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>PSA Sharing Settings</label>
</CustomObject>